--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -207,11 +207,20 @@
     <Compile Include="Migrations\201905220950299_InitialModel.Designer.cs">
       <DependentUpon>201905220950299_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905221147266_AddisSubscribedToNewsLetter.cs" />
+    <Compile Include="Migrations\201905221147266_AddisSubscribedToNewsLetter.Designer.cs">
+      <DependentUpon>201905221147266_AddisSubscribedToNewsLetter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905221151223_AddMembershipType.cs" />
+    <Compile Include="Migrations\201905221151223_AddMembershipType.Designer.cs">
+      <DependentUpon>201905221151223_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -301,6 +310,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201905220950299_InitialModel.resx">
       <DependentUpon>201905220950299_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221147266_AddisSubscribedToNewsLetter.resx">
+      <DependentUpon>201905221147266_AddisSubscribedToNewsLetter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221151223_AddMembershipType.resx">
+      <DependentUpon>201905221151223_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
