--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -223,6 +223,10 @@
     <Compile Include="Migrations\201905221209039_ApplyAnotationstoCustomerName.Designer.cs">
       <DependentUpon>201905221209039_ApplyAnotationstoCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905221221112_RemoveExtraMembershipeTypeIdColumn.cs" />
+    <Compile Include="Migrations\201905221221112_RemoveExtraMembershipeTypeIdColumn.Designer.cs">
+      <DependentUpon>201905221221112_RemoveExtraMembershipeTypeIdColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -330,6 +334,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905221209039_ApplyAnotationstoCustomerName.resx">
       <DependentUpon>201905221209039_ApplyAnotationstoCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221221112_RemoveExtraMembershipeTypeIdColumn.resx">
+      <DependentUpon>201905221221112_RemoveExtraMembershipeTypeIdColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
