Added Birthdate Property to Customers

--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\201905221401294_PopulateNameMembershipType.Designer.cs">
       <DependentUpon>201905221401294_PopulateNameMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905221413029_AddBirthdatePropertyToCustomers.cs" />
+    <Compile Include="Migrations\201905221413029_AddBirthdatePropertyToCustomers.Designer.cs">
+      <DependentUpon>201905221413029_AddBirthdatePropertyToCustomers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -351,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905221401294_PopulateNameMembershipType.resx">
       <DependentUpon>201905221401294_PopulateNameMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221413029_AddBirthdatePropertyToCustomers.resx">
+      <DependentUpon>201905221413029_AddBirthdatePropertyToCustomers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
