--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201905221433587_PopulateGenre.Designer.cs">
       <DependentUpon>201905221433587_PopulateGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905221442485_AddExtraGenre.cs" />
+    <Compile Include="Migrations\201905221442485_AddExtraGenre.Designer.cs">
+      <DependentUpon>201905221442485_AddExtraGenre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -331,6 +335,7 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
+    <Content Include="Views\Movie\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -387,6 +392,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905221433587_PopulateGenre.resx">
       <DependentUpon>201905221433587_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905221442485_AddExtraGenre.resx">
+      <DependentUpon>201905221442485_AddExtraGenre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
