--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -259,6 +259,10 @@
     <Compile Include="Migrations\201905221442485_AddExtraGenre.Designer.cs">
       <DependentUpon>201905221442485_AddExtraGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905231214460_AddMembershipTypeIdtoCustomer.cs" />
+    <Compile Include="Migrations\201905231214460_AddMembershipTypeIdtoCustomer.Designer.cs">
+      <DependentUpon>201905231214460_AddMembershipTypeIdtoCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -269,6 +273,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -336,6 +341,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -395,6 +401,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905221442485_AddExtraGenre.resx">
       <DependentUpon>201905221442485_AddExtraGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905231214460_AddMembershipTypeIdtoCustomer.resx">
+      <DependentUpon>201905231214460_AddMembershipTypeIdtoCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
