--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -19,7 +19,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44385</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -283,6 +283,14 @@
     <Compile Include="Migrations\201905231214460_AddMembershipTypeIdtoCustomer.Designer.cs">
       <DependentUpon>201905231214460_AddMembershipTypeIdtoCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905252236007_SeedUsers.cs" />
+    <Compile Include="Migrations\201905252236007_SeedUsers.Designer.cs">
+      <DependentUpon>201905252236007_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905252306199_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201905252306199_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201905252306199_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -292,6 +300,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -536,10 +545,11 @@
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
-    <Content Include="Views\Movie\Index.cshtml" />
+    <Content Include="Views\Movie\List.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movie\MovieForm.cshtml" />
+    <Content Include="Views\Movie\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -603,6 +613,12 @@
     <EmbeddedResource Include="Migrations\201905231214460_AddMembershipTypeIdtoCustomer.resx">
       <DependentUpon>201905231214460_AddMembershipTypeIdtoCustomer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905252236007_SeedUsers.resx">
+      <DependentUpon>201905252236007_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905252306199_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201905252306199_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -622,7 +638,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50551</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50551/</IISUrl>
+          <IISUrl>https://localhost:44385/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
