--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -291,6 +291,10 @@
     <Compile Include="Migrations\201905252306199_AddDrivingLicenseToApplicationUser.Designer.cs">
       <DependentUpon>201905252306199_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905261612301_AddedPhoneToApplicationUser.cs" />
+    <Compile Include="Migrations\201905261612301_AddedPhoneToApplicationUser.Designer.cs">
+      <DependentUpon>201905261612301_AddedPhoneToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -618,6 +622,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905252306199_AddDrivingLicenseToApplicationUser.resx">
       <DependentUpon>201905252306199_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905261612301_AddedPhoneToApplicationUser.resx">
+      <DependentUpon>201905261612301_AddedPhoneToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
