--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -313,6 +313,10 @@
     <Compile Include="Migrations\201905261612301_AddedPhoneToApplicationUser.Designer.cs">
       <DependentUpon>201905261612301_AddedPhoneToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905271120084_AddRentalDbContextToDatabase.cs" />
+    <Compile Include="Migrations\201905271120084_AddRentalDbContextToDatabase.Designer.cs">
+      <DependentUpon>201905271120084_AddRentalDbContextToDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -322,6 +326,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -643,6 +648,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905261612301_AddedPhoneToApplicationUser.resx">
       <DependentUpon>201905261612301_AddedPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905271120084_AddRentalDbContextToDatabase.resx">
+      <DependentUpon>201905271120084_AddRentalDbContextToDatabase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
