--- a/MovieHub/MovieHub.csproj
+++ b/MovieHub/MovieHub.csproj
@@ -317,6 +317,10 @@
     <Compile Include="Migrations\201905271120084_AddRentalDbContextToDatabase.Designer.cs">
       <DependentUpon>201905271120084_AddRentalDbContextToDatabase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905271134410_AddNemuberAvailableToMovie.cs" />
+    <Compile Include="Migrations\201905271134410_AddNemuberAvailableToMovie.Designer.cs">
+      <DependentUpon>201905271134410_AddNemuberAvailableToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -651,6 +655,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905271120084_AddRentalDbContextToDatabase.resx">
       <DependentUpon>201905271120084_AddRentalDbContextToDatabase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905271134410_AddNemuberAvailableToMovie.resx">
+      <DependentUpon>201905271134410_AddNemuberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
